--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="edit_book_form_title">Book data</string>
     <string name="menu_item_book">Books</string>
     <string name="name_of_the_author">Name of the author</string>
+    <string name="save">Save</string>
 </resources>
