--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="menu_item_book">Books</string>
     <string name="name_of_the_author">Name of the author</string>
     <string name="save">Save</string>
+    <string name="delete_all_books">Delete all books</string>
 </resources>
